--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "AI-driven research template powered by Astral tools"
 readme = "README.md"
 authors = [{ name = "kaito" }]
-requires-python = ">=3.13"
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "numpy>=2.0.0",
     "pandas>=2.0.0",
@@ -22,6 +22,8 @@ dev = [
     "ipykernel>=6.29.0",
     "ruff>=0.9.0",
     "marimo>=0.10.0",
+    "playwright>=1.40.0",
+    "ty>=0.0.14",
     "poethepoet>=0.32.0",
 ]
 
@@ -35,6 +37,7 @@ packages = ["src/ai_research_template"]
 [tool.uv]
 managed = true
 package = true
+environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
 
 [tool.ruff]
 line-length = 88
@@ -66,13 +69,16 @@ python-version = "3.13"
 
 [tool.poe.tasks]
 exp = "python scripts/run_experiment.py"
-edit = "marimo edit notebooks/analysis_sample.py"
-app = "marimo run notebooks/analysis_sample.py --headless"
+edit = "python -m marimo edit ${MARIMO_NOTEBOOK:-notebooks/analysis_sample.py}"
+app = "python -m marimo run ${MARIMO_NOTEBOOK:-notebooks/analysis_sample.py} --headless"
+ui-check = "python scripts/marimo_ui_check.py"
 paper = "python scripts/convert_papers.py"
 pdf2img = "python scripts/pdf_to_images.py"
+daily-report = "python scripts/daily_report.py"
 check = "ruff check --fix src scripts"
 format = "ruff format src scripts"
 lint = ["format", "check"]
+typecheck = "ty check src scripts"
 test = "pytest"
 tex-sotsuron = "latexmk -cd -output-directory=out tex/sotsuron/main.tex"
 tex-zemi = "latexmk -cd -output-directory=out tex/zemi/main.tex"
