--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,8 @@ jobs:
       - name: Run Linter & Formatter Check
         run: uv run poe lint
 
+      - name: Run Type Check
+        run: uv run poe typecheck
+
       - name: Run Tests
         run: uv run poe test
